--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,8 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+/src/Scripts/jquery-1.9.1.intellisense.js
+/src/Scripts/jquery-1.9.1.js
+/src/Scripts/jquery-1.9.1.min.js
+/src/Scripts/jquery-1.9.1.min.map
+/.nuget/NuGet.Config
