--- a/src/Javascript-FastClass.csproj
+++ b/src/Javascript-FastClass.csproj
@@ -117,7 +117,10 @@
     <Content Include="Scripts\jquery-1.9.1.min.js">
       <DependentUpon>jquery-1.9.1.js</DependentUpon>
     </Content>
+    <Content Include="Scripts\NamespacesAndEnumSupport.js" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="Scripts\_vs2012.intellisense.js" />
+    <Content Include="Scripts\_vs2012.intellisense.Test.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AssemblyInfo" BeforeTargets="BeforeBuild">
