--- a/src/packages.config
+++ b/src/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
+  <package id="QUnit-MVC" version="1.6.2.0" targetFramework="net45" />
   <package id="VS2012-Javascript-Intellisense" version="1.0.330.2226" targetFramework="net45" />
 </packages>
