Fixed unit tests Added `multiple mixins adding same property should trigger an assert` unit test Added `Function.define should automatically initialize mixins` unit test

--- a/src/Javascript-FastClass.csproj
+++ b/src/Javascript-FastClass.csproj
@@ -105,7 +105,7 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Scripts\Tests\FastClassTests.js" />
+    <Content Include="Scripts\Tests\FastClass.Tests.js" />
     <Content Include="Scripts\Tests\qunit.css" />
     <Content Include="content\scripts\FastClass.min.js">
       <DependentUpon>FastClass.js</DependentUpon>
