--- a/src/Package.nuspec
+++ b/src/Package.nuspec
@@ -3,7 +3,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>Javascript-FastClass</id>
-    <version><![CDATA[1.0.404.215630]]></version>
+    <version><![CDATA[1.0.404.221114]]></version>
     <title>Fast Class Javascript Inheritance</title>
     <authors>DotNetWise</authors>
     <description>A fast and lightest prototype inheritance when you can't use any complied library such as TypeScript or Google Closure</description>
@@ -23,7 +23,7 @@
     <frameworkAssemblies>
     </frameworkAssemblies>
     <references></references>
-    <tags>Javascript,prototype,inheritance,FastClass,fast,class</tags>
+    <tags>Javascript prototype inheritance FastClass fast class inheritWith inherit with define dotnetwise dnw</tags>
   </metadata>
   <files>
     <file src="lib\" target="lib" />
