--- a/src/Package.nuspec
+++ b/src/Package.nuspec
@@ -3,16 +3,18 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>Javascript-FastClass</id>
-    <version><![CDATA[1.0.404.231148]]></version>
+    <version><![CDATA[1.0.405.25811]]></version>
     <title>Fast Class Javascript Inheritance</title>
     <authors>DotNetWise</authors>
     <description>A fast and lightest prototype inheritance when you can't use any complied library such as TypeScript or Google Closure</description>
     <owners>DotNetWise</owners>
     <releaseNotes>
       Fixed defining mixins with Function.define({
-        constructor: function() {
-        }
+        constructor: function() {},
+        method: function() {}
       });
+      Fixed intellisense
+      Added unit-tests
     </releaseNotes>
     <summary>
     </summary>
