--- a/src/Package.nuspec
+++ b/src/Package.nuspec
@@ -3,12 +3,14 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>Javascript-FastClass</id>
-    <version><![CDATA[1.0.405.154152]]></version>
+    <version><![CDATA[1.0.405.154658]]></version>
     <title>Fast Class Javascript Inheritance</title>
     <authors>DotNetWise</authors>
     <description>A fast and lightest prototype inheritance when you can't use any complied library such as TypeScript or Google Closure</description>
     <owners>DotNetWise</owners>
     <releaseNotes>
+      Allow 'abstract' members on class/mixin so they can be redefined by another mixin. Usage: function() {}.defineStatic({abstract:true});
+      Added Function.prototype.defineStatic({}) to define static members on the given function.
       Fixed defining mixins with Function.define({
         constructor: function() {},
         method: function() {}
