--- a/src/Package.nuspec
+++ b/src/Package.nuspec
@@ -3,12 +3,13 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>Javascript-FastClass</id>
-    <version><![CDATA[1.0.701.174526]]></version>
+    <version><![CDATA[1.0.702.214841]]></version>
     <title>Fast Class Javascript Inheritance</title>
     <authors>DotNetWise</authors>
     <description>A fast and lightest prototype inheritance when you can't use any complied library such as TypeScript or Google Closure</description>
     <owners>DotNetWise</owners>
     <releaseNotes>
+      Added inheritWith support to only provided an object when you don't need to call the base or baseCtor, or you call them explicitely
       Fixed missing Object.getPrototypeOf for IE8 or older. All the tests are passing even in IE7 (except enumerable properties which is expected)
       Dropped dependence https://github.com/dotnetwise/VS2012-Javascript-Intellisense
       Added sugar for Function.abstract to quickly define abstract methods
