Added support for node Added to npm

--- a/src/Javascript-FastClass.csproj
+++ b/src/Javascript-FastClass.csproj
@@ -105,6 +105,7 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\NamespacesAndEnumSupport.js" />
     <Content Include="Scripts\Tests\FastClass.Tests.js" />
     <Content Include="Scripts\Tests\qunit.css" />
     <Content Include="content\scripts\FastClass.min.js">
@@ -122,6 +123,8 @@
     <Content Include="Scripts\Tests\qunit.js" />
     <Content Include="Scripts\Tests\Index.html" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="Scripts\_vs2012.intellisense.js" />
+    <Content Include="Scripts\_vs2012.intellisense.Test.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AssemblyInfo" BeforeTargets="BeforeBuild">
