--- a/src/Package.nuspec
+++ b/src/Package.nuspec
@@ -9,6 +9,9 @@
     <description>A fast and lightest prototype inheritance when you can't use any complied library such as TypeScript or Google Closure</description>
     <owners>DotNetWise</owners>
     <releaseNotes>
+      Returning base ctor's result || this on default constructors
+      Dropping WAssert calls when minified with uglifyjs2
+      Added support for Node
       Made use of intellisense.inheritXMLDoc so we automatically inherit XMLDoc from the first base class that has has one specified
       Fixed inheritWith to accept an object when __proto__ is available
       Added inheritWith support to only provided an object when you don't need to call the base or baseCtor, or you call them explicitely
