Better intellisense support for VS2013 (since VS2012 supports __proto__)       inheritWith creator now automatically shows members added on constructor and inherited constructors

--- a/src/Javascript-FastClass.csproj
+++ b/src/Javascript-FastClass.csproj
@@ -87,6 +87,7 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Package.tt</DependentUpon>
+      <SubType>Designer</SubType>
     </None>
     <None Include="Package.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
